# aspect-patch-repro

./: .gitignore  .npmrc  BUILD  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
